# tree-sitter-hcl

./: Cargo.toml  Makefile  go.mod  make_grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/rust/: build.rs  lib.rs
src/: grammar.json  node-types.json  parser.c
test/corpus/: attributes.txt  blocks.txt  collections.txt  conditionals.txt  for_expressions.txt  function_calls.txt  literals.txt  operators.txt  real_world.txt  splat.txt  strings.txt  templates.txt
